noinst_LIBRARIES = libzstd.a

libzstd_a_SOURCES = common/debug.c common/entropy_common.c common/error_private.c common/fse_decompress.c \
  common/pool.c common/threading.c common/xxhash.c common/zstd_common.c decompress/huf_decompress.c \
  decompress/zstd_ddict.c decompress/zstd_decompress.c decompress/zstd_decompress_block.c \
  legacy/zstd_v05.c legacy/zstd_v06.c legacy/zstd_v07.c

libbled_a_CFLAGS = $(AM_CFLAGS)
